[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arbejdstimer"
version = "2022.10.22"
description = "Working hours (Danish arbejdstimer) or not?"
readme = "README.md"
authors = [{ name = "Stefan Hagen", email = "stefan@hagen.link" }]
maintainers = [{ name = "Stefan Hagen", email = "stefan@hagen.link" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
keywords = ["developer-tools", "documentation-tools", "html", "markdown"]
dependencies = [
    "pydantic >= 1.10.2",
    "typer >= 0.6.1",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["black", "coverage", "flake8", "hypothesis", "mypy", "pytest", "pytest-cov", "pytest-flake8"]

[project.urls]
Homepage = "https://git.sr.ht/~sthagen/arbejdstimer"
Bug-Tracker = "https://todo.sr.ht/~sthagen/arbejdstimer"
Documentation = "https://codes.dilettant.life/docs/arbejdstimer"
Source-Code = "https://git.sr.ht/~sthagen/arbejdstimer"
Test-Coverage = "https://codes.dilettant.life/coverage/arbejdstimer"

[project.scripts]
arbejdstimer = "arbejdstimer.cli:app"

[tool.setuptools.packages.find]
include = ["arbejdstimer"]
exclude = ["test*"]

[bdist_wheel]
universal = true

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ["py38", "py39", "py310"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@overload",
]
omit = [
    "*/__main__.py",
]

[tool.isort]
line_length = 120
known_first_party = "arbejdstimer"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true

[tool.mypy]
strict = true
implicit_reexport = true

[tool.pytest]
testpaths = "test"
filterwarnings = "error"
